# project-steward

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  agent-artifacts.json  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
.project-steward/: DECISIONS.md  HANDOFF.md  PLAN.md  PROGRESS.md  PROJECT.md  QUESTIONS.md  RISKS.md  VERIFY.md  backend.json  state.json
codex/: INSTALL.md
codex/prompts/: steward-checkpoint.md  steward-resume.md  steward-wrap.md
commands/: backend.md  checkpoint.md  init.md
hooks/scripts/: project_steward_hook.py
plugin-src/: metadata.json
plugin-src/references/: cross-platform.md  migration-from-projectforge.md  security-model.md
plugin/.claude-plugin/: plugin.json
plugin/.codex-plugin/: plugin.json
plugin/commands/: audit.md  wrap.md
plugin/hooks/: codex.hooks.json  hooks.json
plugin/references/: cross-platform.md  security-model.md
references/: backend-selection.md  self-hosting.md  session-protocol.md
skills/backend-broker/: SKILL.md
skills/progress-tracking/: SKILL.md
skills/project-init/: SKILL.md
skills/session-resume/: SKILL.md
src/project_steward/: __init__.py  __main__.py  cli.py  doctor.py  hooks.py  legacy_alias.py  migrate.py  scaffold.py  security.py  sessions.py  state.py  survey.py  tomlmini.py
templates/: AGENTS.md.template
tests/: conftest.py  test_agent_artifact_maintainer.py  test_backend_broker.py  test_codex_plugin.py  test_hooks_stop_guard.py  test_managed_blocks.py  test_migrate.py  test_payload_builder.py  test_scaffold_init.py  test_security.py  test_sessions.py  test_skill_text.py  test_state.py  test_survey_doctor_cli.py  test_tomlmini.py
tools/: build_plugin_payloads.py  publish_agent_artifact_pr.py
(+40 files in other folders)
