[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "project-steward"
version = "0.3.0"
description = "Cross-agent project stewardship: durable repo-resident project memory, handoff/resume, and progress tracking for Claude Code, Codex, and other coding agents."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "Shuhan Wang" }]
keywords = ["agents", "claude-code", "codex", "project-management", "handoff", "agents-md"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
]
# Standard library only — cross-platform by construction.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
project-steward = "project_steward.cli:main"
projectforge = "project_steward.legacy_alias:main"

[project.urls]
Homepage = "https://github.com/WSH95/project-steward"
Changelog = "https://github.com/WSH95/project-steward/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["plugin-src/src"]

[tool.setuptools.package-data]
project_steward = ["templates/*.template", "templates/project-steward/*.template"]

[tool.pytest.ini_options]
testpaths = ["tests"]
